# CustomerChurnML

./: Mall_Customers_Cleaned.csv  README.md  Telco_Customer_Churn.csv
customer_churn_ml/: __init__.py  config.yaml  pyproject.toml
customer_churn_ml/src/data_preprocess/: config.yaml  data_preprocesser.py  eda.ipynb
customer_churn_ml/src/model/: model.py
customer_churn_ml/tests/test_data_loader/: test_data_loader.py
customer_churn_ml/tests/test_data_preprocesser/: test_data_preprocess.py
mall_customers_ml/: pyproject.toml
mall_customers_ml/src/data_loader/: data_loader.py
mall_customers_ml/src/data_preprocess/: __init__.py  data_preprocesser.py
mall_customers_ml/tests/test_data_loader/: __init__.py  test_data_loader.py
mall_customers_ml/tests/test_data_preprocesser/: __init__.py
